--- a/react-ui/src/styles/globals.css
+++ b/react-ui/src/styles/globals.css
@@ -3,8 +3,7 @@ body,
 #__next {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: "Inter", Helvetica Neue, Helvetica, Arial, sans-serif;
   height: 100%;
 }
 
