--- a/react-ui/src/styles/tokens.scss
+++ b/react-ui/src/styles/tokens.scss
@@ -1,1 +1,6 @@
-$firefoxGradient: linear-gradient(-90deg, #FF9100 0%, #F10366 50%, #6173FF 100%);
+$firefoxGradient: linear-gradient(
+  -90deg,
+  #ff9100 0%,
+  #f10366 50%,
+  #6173ff 100%
+);
